Stop pictures overflowing their floats.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,6 +25,7 @@ body {
     position: relative;
     z-index: 0;
     padding: 20px;
+		overflow-y: auto;
 }
 #content img.center-img {
     width: 100%;
